Swap out the remaining mangled names
Issue:
https://gitcode.com/openharmony/arkcompiler_ets_frontend/issues/7919

Description:
- updated code places with the new name format
- new mangled names for getter, setter, property, partial and async
- updated many related tests

Testing:
All required per-merge tests have passed.

Related to internal issue #21301

Change-Id: I0f2995a0c5ebe78b1589fdc7a3e729975f25432b
Signed-off-by: Otto Eotvos <otto.eotvos@h-lab.eu>


revert merge request: Add the remaining new mangled names and update the related code

1cf7c861b99dba3ed5f6fea0d84593f1c2adac3e

This revert merge request !8635

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -30,9 +30,9 @@ defines:
     ref: GET_INDEX_METHOD
   - name: $_set
     ref: SET_INDEX_METHOD
-  - name: '%%get-'
+  - name: <get>
     ref: GETTER_METHOD_BEGIN
-  - name: '%%set-'
+  - name: <set>
     ref: SETTER_METHOD_BEGIN
   - name: $_iterator
     ref: ITERATOR_METHOD
@@ -170,7 +170,7 @@ defines:
     ref: ARRAY
   - name: 'gradual'
     ref: GRADUAL_TYPE_NAME
-  - name: '%%property-'
+  - name: '<property>'
     ref: PROPERTY
   - name: 'Any'
     ref: ANY_TYPE_NAME
@@ -789,7 +789,7 @@ signatures:
     ref: BUILTIN_STRING_CHAR_AT
 
   - callee: BUILTIN_ARRAY
-    method_name: '%%get-length'
+    method_name: <get>length
     params: []
     return_type: PRIMITIVE_INT
     ref: BUILTIN_ARRAY_LENGTH
