--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -406,3 +406,8 @@ options:
   type: bool
   default: false
   description: "Permit experimental 'any' type annotation"
+
+- name: emit-metadata
+  type: bool
+  default: false
+  description: "(experimental) Emit metadata into abc file, to use it while importing the current module from other modules instead of using sources directly"
