--- a/ets2panda/test/unit/CMakeLists.txt
+++ b/ets2panda/test/unit/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(any_ins_test)
 add_subdirectory(source_file_message)
 add_subdirectory(reg_allocator)
 add_subdirectory(debug_info)
+add_subdirectory(metadata)
 
 ets2panda_add_gtest(es2panda_astdumper_tests
     CPP_SOURCES ast_dumper_test.cpp
@@ -90,3 +91,7 @@ add_subdirectory(ets_specific_optimizer)
 ets2panda_add_gtest(es2panda_checker_tests
     CPP_SOURCES checker_test.cpp
 )
+
+set(FLATBUFFERS_CXX_FLAGS "-Wno-error")
+set(FLATBUFFERS_DIR "${PANDA_THIRD_PARTY_SOURCES_DIR}/flatbuffers")
+panda_target_include_directories(es2panda_metadata_test PRIVATE ${FLATBUFFERS_DIR}/include/)
