Wrong export explicitly produces CTE
Issue: https://gitcode.com/openharmony/arkcompiler_ets_frontend/issues/9080
Signed-off-by: alexanderandreevmir <alexanderandreevmir@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -625,8 +625,8 @@ syntax:
 
 - name: INVALID_DECORATOR_CONSTRUCTOR
   id: 201
-  message: "The modifier for a constructor should be limited to access modifiers (private, protected, public), and
-    'native' modifiers."
+  message: "The modifier for a constructor should be limited to access modifiers (private, protected, public), and 'native'
+    modifiers."
 
 - name: INVALID_DESTRUCTURING_INIT_SIZE
   id: 82935
