Enable build system tests
Issue: https://gitcode.com/openharmony/arkcompiler_ets_frontend/issues/9196

Signed-off-by: nikeytsevevgeniy <nikeytsev.evgeniy@huawei-partners.com>

--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -14,41 +14,41 @@
     "demo_entry1.2_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.2_hsp1.2/build_config2.json",
     "demo_entry1.2_hsp1.1:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_hsp1.1/build_config.json",
     "demo_entry1.2_har1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_har1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.2/build_config2.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.2/build_config3.json",
-    "demo_entry1.1_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_hsp1.2/build_config2.json",
+    "actual_test:demo_entry1.1_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_hsp1.2/build_config2.json",
     "demo_entry1.2_har1.2_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_har1.2_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.2_hsp1.2/build_config2.json",
     "demo_entry1.2_har1.2_hsp1.1:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_har1.2_hsp1.1/build_config.json",
-    "demo_entry1.1_har1.1_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_har1.1_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_har1.1_hsp1.2/build_config2.json",
+    "actual_test:demo_entry1.1_har1.1_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_har1.1_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_har1.1_hsp1.2/build_config2.json",
     "demo_entry1.1_har1.2_hsp1.1:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_har1.2_hsp1.1/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_har1.2_hsp1.1/build_config2.json",
     "demo_entry1.1_har1.2_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.1_har1.2_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.1_har1.2_hsp1.2/build_config2.json",
     "demo_entry1.2_har1.1_hsp1.2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_har1.1_hsp1.2/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.1_hsp1.2/build_config2.json",
     "demo_entry1.2_har1.1_hsp1.1:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1.2_har1.1_hsp1.1/build_config1.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.1_hsp1.1/build_config2.json && node ./dist/entry.js test/e2e/demo_entry1.2_har1.1_hsp1.1/build_config3.json",
-    "demo_entry1_2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1_2/build_config.json",
-    "demo_har1_2:gen_decl": "node ./dist/entry.js test/e2e/demo_har1_2/build_config_decl.json",
-    "demo_hsp1_2:gen_decl": "node ./dist/entry.js test/e2e/demo_hsp1_2/build_config_decl.json",
-    "entry1_1_external_har1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_1_external_har1_2/build_config.json",
-    "entry1_1_external_har1_2:gen_decl": "node ./dist/entry.js test/e2e/entry1_1_external_har1_2/build_config_decl.json",
-    "entry1_1_external_hsp1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_1_external_hsp1_2/build_config_decl.json && node ./dist/entry.js test/e2e/entry1_1_external_hsp1_2/build_config.json",
+    "actual_test:demo_entry1_2:gen_abc": "node ./dist/entry.js test/e2e/demo_entry1_2/build_config.json",
+    "actual_test:demo_har1_2:gen_decl": "node ./dist/entry.js test/e2e/demo_har1_2/build_config_decl.json",
+    "actual_test:demo_hsp1_2:gen_decl": "node ./dist/entry.js test/e2e/demo_hsp1_2/build_config_decl.json",
+    "actual_test:entry1_1_external_har1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_1_external_har1_2/build_config.json",
+    "actual_test:entry1_1_external_har1_2:gen_decl": "node ./dist/entry.js test/e2e/entry1_1_external_har1_2/build_config_decl.json",
+    "actual_test:entry1_1_external_hsp1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_1_external_hsp1_2/build_config_decl.json && node ./dist/entry.js test/e2e/entry1_1_external_hsp1_2/build_config.json",
     "entry1_1_external_hsp1_2:gen_decl": "node ./dist/entry.js test/e2e/entry1_1_external_hsp1_2/build_config_decl.json",
     "entry1_2_external_har1_1:gen_abc": "node ./dist/entry.js test/e2e/entry1_2_external_har1_1/build_config.json",
     "entry1_2_external_hsp1_1:gen_abc": "node ./dist/entry.js test/e2e/entry1_2_external_hsp1_1/build_config.json",
-    "entry1_2_external_har1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_2_external_har1_2/build_config.json",
+    "actual_test:entry1_2_external_har1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_2_external_har1_2/build_config.json",
     "entry1_2_external_hsp1_2:gen_abc": "node ./dist/entry.js test/e2e/entry1_2_external_hsp1_2/build_config.json",
-    "entry1_2_external_hsp1_2:gen_decl": "node ./dist/entry.js test/e2e/entry1_2_external_hsp1_2/build_config_decl.json",
-    "demo_multi_source_roots:gen_abc": "node ./dist/entry.js test/e2e/demo_multi_source_roots/build_config.json",
-    "demo_custom_index:gen_abc": "node ./dist/entry.js test/e2e/demo_custom_index/build_config.json",
+    "actual_test:entry1_2_external_hsp1_2:gen_decl": "node ./dist/entry.js test/e2e/entry1_2_external_hsp1_2/build_config_decl.json",
+    "actual_test:demo_multi_source_roots:gen_abc": "node ./dist/entry.js test/e2e/demo_multi_source_roots/build_config.json",
+    "actual_test:demo_custom_index:gen_abc": "node ./dist/entry.js test/e2e/demo_custom_index/build_config.json",
     "IncrementDemo:gen_abc": "node ./dist/entry.js test/e2e/IncrementDemo/build_config.json",
     "mixed_hap:gen_decl": "node ./dist/entry.js test/demo_mix_hap/build_config_decl.json",
     "mixed_hap:gen_abc": "node ./dist/entry.js test/demo_mix_hap/build_config.json",
     "mixed_hap:run": "npm run mixed_hap:gen_decl && npm run mixed_hap:gen_abc",
     "demo_hap:gen_abc": "node ./dist/entry.js test/demo_hap/build_config.json",
-    "gen_abc_single": "node ./dist/entry.js test/single_file/build_config.json",
-    "gen_abc_two": "node ./dist/entry.js test/two_files/build_config.json",
-    "gen_abc_multi": "node ./dist/entry.js test/multi_file/build_config.json",
+    "actual_test:gen_abc_single": "node ./dist/entry.js test/single_file/build_config.json",
+    "actual_test:gen_abc_two": "node ./dist/entry.js test/two_files/build_config.json",
+    "actual_test:gen_abc_multi": "node ./dist/entry.js test/multi_file/build_config.json",
     "build_binary_har_app": "node ./dist/entry.js test/mock_har_abc/build_config.json && node ./dist/entry.js test/har_app/build_config.json",
     "build_hap_ark_link": "node ./dist/entry.js test/mock_abc/build_config.json && node ./dist/entry.js test/entry_import_har/build_config.json",
-    "build_hap_hsp": "node ./dist/entry.js test/e2e/demo_entry_hsp_har/build_config.json",
-    "build_empty_files": "node ./dist/entry.js test/e2e/empty_arklink/build_config.json && node ./dist/entry.js test/e2e/empty_entry_files/build_config.json",
-    "interop_sdk": "node ./dist/entry.js test/e2e/demo_interop_sdk/build_config.json",
+    "actual_test:build_hap_hsp": "node ./dist/entry.js test/e2e/demo_entry_hsp_har/build_config.json",
+    "actual_test:build_empty_files": "node ./dist/entry.js test/e2e/empty_arklink/build_config.json && node ./dist/entry.js test/e2e/empty_entry_files/build_config.json",
+    "actual_test:interop_sdk": "node ./dist/entry.js test/e2e/demo_interop_sdk/build_config.json",
     "ut_test": "jest test/ut",
     "plugin_test": "jest --testMatch='<rootDir>/test/plugin/**/*.test.ts'",
     "manual_decl_test": "jest --testMatch='<rootDir>/test/ut/base_modeTest/manual.declFile.test.ts'",
@@ -56,8 +56,11 @@
     "build_system_Etest": "TEST=demo_entry1.2_hsp1.1:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'",
     "IncrementCompileTest1": "node ./dist/entry.js test/e2e/IncrementDemo/build_config.json && sed -i 's/hello world from harA!/hello world from harA! (modified)/' \"$(pwd)/test/e2e/IncrementDemo/harB/index.ets\" && TEST=IncrementDemo:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'",
     "IncrementCompileTest2": "node ./dist/entry.js test/e2e/IncrementDemo/build_config.json && sed -i 's/console.log(strA)/console.log(strA + \"modified\")/' \"$(pwd)/test/e2e/IncrementDemo/entry/index.ets\" && TEST=IncrementDemo:gen_abc jest --testMatch='**/test/e2e/*.test.ts' --testPathIgnorePatterns='test/ut/'",
-    "simultaneous_compiling:namespace_import": "node ./dist/entry.js test/simultaneous_compiling/namespace_import/build_config.json",
-    "run_tests:ci": "npm run build && npm run gen_abc_single && npm run gen_abc_two && npm run simultaneous_compiling:namespace_import && npm run interop_sdk && npm run gen_abc_multi && npm run build_hap_hsp && npm run manual_decl_test && npm run demo_multi_source_roots:gen_abc && npm run demo_custom_index:gen_abc && npm run build_empty_files"
+    "actual_test:simultaneous_compiling:namespace_import": "node ./dist/entry.js test/simultaneous_compiling/namespace_import/build_config.json",
+    "actual_test:externalProject": "node ./dist/entry.js test/e2e/externalProject/build_config_har1_1.json && node ./dist/entry.js test/e2e/externalProject/build_config_hsp1_2.json && node ./dist/entry.js test/e2e/externalProject/build_config_hsp1_1.json && node ./dist/entry.js test/e2e/externalProject/build_config_har1_2.json",
+    "actual_test:demo_circular_dependency": "node ./dist/entry.js test/e2e/demo_circular_dependency_1.2/build_config.json",
+    "actual_test": "npm run actual_test:demo_entry1.1_hsp1.2:gen_abc && npm run actual_test:demo_entry1.1_har1.1_hsp1.2:gen_abc && npm run actual_test:demo_entry1_2:gen_abc && npm run actual_test:demo_har1_2:gen_decl && npm run actual_test:demo_hsp1_2:gen_decl && npm run actual_test:entry1_1_external_har1_2:gen_abc && npm run actual_test:entry1_1_external_har1_2:gen_decl && npm run actual_test:entry1_1_external_hsp1_2:gen_abc && npm run actual_test:entry1_2_external_har1_2:gen_abc && npm run actual_test:entry1_2_external_hsp1_2:gen_decl && npm run actual_test:demo_multi_source_roots:gen_abc && npm run actual_test:demo_custom_index:gen_abc && npm run actual_test:gen_abc_single && npm run actual_test:gen_abc_two && npm run actual_test:gen_abc_multi && npm run actual_test:build_hap_hsp && npm run actual_test:build_empty_files && npm run actual_test:interop_sdk && npm run actual_test:simultaneous_compiling:namespace_import && npm run actual_test:externalProject && npm run actual_test:demo_circular_dependency",
+    "run_tests:ci": "npm run build && npm run actual_test"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
