--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -71,7 +71,7 @@
     "@eslint/compat": "1.3.2",
     "@eslint/js": "9.35.0",
     "@stylistic/eslint-plugin": "5.3.1",
-    "@types/node": "18.11.7",
+    "@types/node": "^18.11.7",
     "eslint": "9.35.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "48.0.6",
